err/plutonium-plugin-configui-web.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Plutonium-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Sqlchemyforms-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-0.4.17.egg-info'...
Listing './lib/python3.5/site-packages/alembic'...
Listing './lib/python3.5/site-packages/alembic/autogenerate'...
Listing './lib/python3.5/site-packages/alembic/ddl'...
Listing './lib/python3.5/site-packages/alembic/templates'...
Listing './lib/python3.5/site-packages/alembic/templates/generic'...
Listing './lib/python3.5/site-packages/alembic/templates/multidb'...
Listing './lib/python3.5/site-packages/alembic/templates/pylons'...
Listing './lib/python3.5/site-packages/alembic/testing'...
Listing './lib/python3.5/site-packages/alembic/testing/plugin'...
Listing './lib/python3.5/site-packages/alembic-0.7.4.egg-info'...
Listing './lib/python3.5/site-packages/bunch'...
Listing './lib/python3.5/site-packages/bunch-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plutonium'...
Listing './lib/python3.5/site-packages/plutonium/alembic'...
Listing './lib/python3.5/site-packages/plutonium/alembic/versions'...
Listing './lib/python3.5/site-packages/plutonium/example_configs'...
Listing './lib/python3.5/site-packages/plutonium/models'...
Listing './lib/python3.5/site-packages/plutonium/modules'...
Compiling './lib/python3.5/site-packages/plutonium/modules/background_process_handler.py'...
***   File "./lib/python3.5/site-packages/plutonium/modules/background_process_handler.py", line 71
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plutonium/modules/orm'...
Compiling './lib/python3.5/site-packages/plutonium/modules/tools.py'...
***   File "./lib/python3.5/site-packages/plutonium/modules/tools.py", line 64
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plutonium/plugins'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/languages'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/css'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/js'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/pic'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/sqlchemyforms'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/sqlchemyforms/css'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/sqlchemyforms/fonts'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web/wwwroot/sqlchemyforms/js'...
Listing './lib/python3.5/site-packages/plutonium_plugin_configui_web-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pyjsonrpc'...
Compiling './lib/python3.5/site-packages/pyjsonrpc/http.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/http.py", line 486
    print "Content-Type: application/json"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyjsonrpc/rpclib.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/rpclib.py", line 124
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_jsonrpc-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlchemyforms'...
Listing './lib/python3.5/site-packages/sqlchemyforms/table'...
Listing './lib/python3.5/site-packages/sqlchemyforms/validators'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
